add routes api & mock data
